@startuml 组织与权限

class Tenant {
    - tenantId: Long
    - code: String
    - name: String
    - description: String
    - state: SwitchState
'    - createdAt: Long
'    - updatedAt: Long
'    - createdBy: UserId
'    - updatedBy: UserId
}
class UserGroup {
     - groupId: Long
     - code: String
     - name: String
     - type: GroupType
     - parentId: Long
     - contact: String
     - state: SwitchState
     - ext: Text
     - tenantId: Long
 '    - createdAt: Long
 '    - updatedAt: Long
 '    - createdBy: UserId
 '    - updatedBy: UserId
 }
class AuthenticationProvider {
    + register(User u): Boolean
    + authenticate(Principal p): User
}
class AuthorizationProvider {
    + grant(RoleId rid, Long permissionId): Boolean
    + grant(RoleId rid, Collection<Long> permissionIds): Boolean
    + grant(UserId uid, RoleId rId): Boolean
    + grant(UserId uid, Collection<RoleId> rIds): Boolean
    + revoke(RoleId rid, Long permissionId): Boolean
    + revoke(UserId uid, RoleId rId): Boolean
    + revokeAll(RoleId rId): Boolean
    + revokeAll(UserId uId): Boolean
}
class UserAggregate {
    - userId: UserId
    - name: String
    - state: SwitchState
    - tenantId: Long
    - roles: Text
'    - createdAt: Long
'    - updatedAt: Long
'    - createdBy: UserId
'    - updatedBy: UserId
    + inRole(RoleId id): Boolean
    + hasPermission(Long permissionId): Boolean
    + getRoles(): Collection
    + getPermissions(): Collection
}
class RoleAggregate {
    - roleId: RoleId
    - code: String
    - name: String
    - platform: String
    - state: SwitchState
    - removed: Integer
    - tenantId: Long
    - permsJson: Text
'    - createdAt: Long 创建时间
'    - updatedAt: Long 更新时间
'    - removedAt: Long 删除删减
'    - createdBy: Long 创建人
'    - updatedBy: Long 更新人
'    - removedBy: Long 删除人
    + getUsers(): Collection
    + hasPermission(Long permissionId): Boolean
    + getPermissions(): Collection
}
class Permission {
    - permissionId: Long
    - resourceId: Long
    - operationId: Long
    - platform: String
    - state: SwitchState
    - removed: Integer
    - tenantId: Long
'    - createdAt: Long
'    - updatedAt: Long
'    - removedAt: Long
'    - createdBy: Long
'    - updatedBy: Long
'    - removedBy: Long
}
class Resource {
    - resourceId: Long
    - name: String
    - code: String
    - path: String
    - platform: String
    - parentId: Long
    - state: SwitchState
    - removed: Integer
    - tenantId: Long
'    - createdAt: Long
'    - updatedAt: Long
'    - removedAt: Long
'    - createdBy: Long
'    - updatedBy: Long
'    - removedBy: Long
}
class Operation {
    - operationId: Long
    - name: String
    - code: String
    - platform: String
    - state: SwitchState
    - removed: Integer
    - resources: String
    - tenantId: Long
'    - createdAt: Long
'    - updatedAt: Long
'    - removedAt: Long
'    - createdBy: Long
'    - updatedBy: Long
'    - removedBy: Long
}

UserGroup --> UserGroup
UserAggregate "1"-->"*" UserGroup
UserAggregate "1"-->"*" RoleAggregate
RoleAggregate "1"-->"*" Permission
Permission *-->"1" Resource
Permission *-->"1" Operation

@enduml